tests/snapshots/cli_help__article_block_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Manage blocks within a directory article

Usage: mf article block [OPTIONS] <COMMAND>

Commands:
  new       Create a block within a directory article
  move      Move a block within a directory article
  renumber  Renumber blocks contiguously
  rename    Rename a block within a directory article
  rm        Remove a block within a directory article [aliases: remove]

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
