tests/snapshots/cli_help__article_block_move_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Move a block within a directory article

Usage: mf article block move [OPTIONS] <ARTICLE> <BLOCK>

Arguments:
  <ARTICLE>  Article path (e.g. docs/my-article), bare slug, or title
  <BLOCK>    Block filename, numbered stem, slug, or completed path

Options:
      --after <AFTER>           Move after a block filename, numbered stem, slug, or completed path
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
      --start <START>           Numbering origin applied after the move [default: 1]
  -n, --dry-run                 Preview changes without writing
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
