tests/snapshots/cli_help__article_block_rm_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Remove a block within a directory article

Usage: mf article block rm [OPTIONS] <ARTICLE> <BLOCK>

Arguments:
  <ARTICLE>  Article path (e.g. docs/my-article), bare slug, or title
  <BLOCK>    Block filename, numbered stem, slug, or completed path within the article

Options:
  -f, --force                   Proceed despite safety checks: overwrite an existing target, or
                                remove an entity referenced by others
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -y, --yes                     Skip interactive confirmation prompt
  -n, --dry-run                 Preview changes without writing
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
