tests/snapshots/cli_help__article_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Manage articles

Usage: mf article [OPTIONS] [COMMAND]

Commands:
  new      Create an article
  list     List articles [aliases: ls]
  lint     Lint articles
  index    Index articles
  rename   Rename an article
  move     Move an article to another project
  remove   Remove an article [aliases: rm]
  show     Show article details
  update   Update article metadata
  block    Manage blocks within a directory article
  convert  Convert article shape between directory and single-file

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
