tests/snapshots/cli_help__article_new_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Create an article

Usage: mf article new [OPTIONS] <TITLE>

Arguments:
  <TITLE>  Article title (sole positional)

Options:
      --root <PATH>          Mind Repo root directory
      --slug <SLUG>          Optional ASCII-friendly filename slug. Without it the title is used
      --config <PATH>        Config file path
  -t, --template <TEMPLATE>  Template: built-in schema name (blank/arch/prd/blog) or path under
                             project root. Default: blank [default: blank]
      --file                 Write a single file instead of a directory [aliases: --single-file]
  -v, --verbose...           Verbose output
  -q, --quiet                Silence non-error output
      --tag <TAG>            
      --draft                
  -o, --output <FORMAT>      Output format [default: text] [possible values: text, json]
  -f, --force                Proceed despite safety checks: overwrite an existing target, or remove
                             an entity referenced by others
      --json                 Shorthand for --output json
  -n, --dry-run              Preview changes without writing
      --no-color             Disable colored output
  -p, --project <NAME>       Project name for project-scoped operations
  -h, --help                 Print help
  -V, --version              Print version
