tests/snapshots/cli_help__asset_add_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Add an asset

Usage: mf asset add [OPTIONS] <PATH>

Arguments:
  <PATH>  

Options:
      --name <NAME>
          
      --root <PATH>
          Mind Repo root directory
      --config <PATH>
          Config file path
      --tag <TAG>
          
      --copy
          
  -v, --verbose...
          Verbose output
      --link
          
  -q, --quiet
          Silence non-error output
  -f, --force
          
      --format <FORMAT>
          Output format [default: text] [possible values: text, json]
      --dry-run
          
      --json
          Shorthand for --format json
      --no-color
          Disable colored output
  -p, --project <NAME>
          Project name for project-scoped operations
      --install-completion <INSTALL_COMPLETION>
          Install shell completion script [possible values: bash, zsh, fish, powershell, elvish]
      --show-completion <SHOW_COMPLETION>
          Show shell completion script [possible values: bash, zsh, fish, powershell, elvish]
  -h, --help
          Print help
  -V, --version
          Print version
