tests/snapshots/cli_help__asset_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Manage project assets

Usage: mf asset [OPTIONS] [COMMAND]

Commands:
  list    List assets [aliases: ls]
  new     Create an asset
  update  Update assets
  index   Index assets
  clean   Clean stale asset index entries
  remove  Remove an asset [aliases: rm]
  rename  Rename an asset
  move    Move an asset to another project
  show    Show asset details

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
